--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyDxLe_9A-NZh9IlHF_O1rufAajVduodeTo"/>
+            android:value= "@string/maps_api_key"/>
 
         <activity
             android:name=".MainActivity"
